--- a/Notebooks/Bayesian_Inferences.ipynb
+++ b/Notebooks/Bayesian_Inferences.ipynb
@@ -45,7 +45,7 @@
         "colab_type": "text"
       },
       "source": [
-        "**DESCRIPTION2**\n",
+        "**DESCRIPTION**\n",
         "\n",
         "The data represents the **variance** of the given column\n",
         "\n",
