--- a/Notebooks/Learning_Bayesian_Networks_from_Data.ipynb
+++ b/Notebooks/Learning_Bayesian_Networks_from_Data.ipynb
@@ -7,8 +7,6 @@
       "version": "0.3.2",
       "provenance": [],
       "collapsed_sections": [
-        "xWQ_R83GIhhY",
-        "c2piD9Tf0rLO",
         "K-OMpqYHMLgR"
       ],
       "toc_visible": true,
@@ -89,11 +87,11 @@
       "metadata": {
         "id": "roFd5Umx8w7X",
         "colab_type": "code",
+        "outputId": "4de3cde2-6e6d-451c-bf40-f32625121e95",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 462
-        },
-        "outputId": "4de3cde2-6e6d-451c-bf40-f32625121e95"
+        }
       },
       "source": [
         "import pandas as pd\n",
@@ -107,7 +105,7 @@
         "                                    \"small\", \"large\", \"large\", \"large\", \"large\", \"small\", \"small\"]})\n",
         "data"
       ],
-      "execution_count": 6,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -269,11 +267,11 @@
       "metadata": {
         "id": "puu0vFqIAfS_",
         "colab_type": "code",
+        "outputId": "56d4a47f-c51a-4ac4-e6cd-25cf6c25fca6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "56d4a47f-c51a-4ac4-e6cd-25cf6c25fca6"
+        }
       },
       "source": [
         "from pgmpy.models import BayesianModel\n",
@@ -282,7 +280,7 @@
         "\n",
         "model = BayesianModel([('fruit', 'tasty'), ('size', 'tasty')])\n"
       ],
-      "execution_count": 10,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -303,16 +301,16 @@
       "metadata": {
         "id": "CbSFB9FTBmeF",
         "colab_type": "code",
+        "outputId": "a518da24-43f3-46a3-9919-96627c70c888",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "a518da24-43f3-46a3-9919-96627c70c888"
+        }
       },
       "source": [
         "!pip install graphviz #Use to visualize network"
       ],
-      "execution_count": 8,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -328,11 +326,11 @@
       "metadata": {
         "id": "6owWpqSiBpDv",
         "colab_type": "code",
+        "outputId": "1819a582-6b86-43d4-ae21-fb4ffc116db9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 176
-        },
-        "outputId": "1819a582-6b86-43d4-ae21-fb4ffc116db9"
+        }
       },
       "source": [
         "from graphviz import Digraph #directed graph (good for bayesian networks)\n",
@@ -349,7 +347,7 @@
         "    \n",
         "g"
       ],
-      "execution_count": 36,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -383,11 +381,11 @@
       "metadata": {
         "id": "-plGQOKjGG2S",
         "colab_type": "code",
+        "outputId": "3334204e-c30c-4e11-d002-95590b02c6e7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 185
-        },
-        "outputId": "3334204e-c30c-4e11-d002-95590b02c6e7"
+        }
       },
       "source": [
         "from pgmpy.estimators import ParameterEstimator #import parameterEstimator\n",
@@ -402,7 +400,7 @@
         "#Tasty has 2 states (yes, no)\n",
         "print(\"\\n\", pe.state_counts('tasty'))  # conditional on fruit and size"
       ],
-      "execution_count": 37,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -427,11 +425,11 @@
       "metadata": {
         "id": "-DFzIFt_KJV5",
         "colab_type": "code",
+        "outputId": "5d766765-75d7-445f-8ebb-9dd244854da6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 252
-        },
-        "outputId": "5d766765-75d7-445f-8ebb-9dd244854da6"
+        }
       },
       "source": [
         "from pgmpy.estimators import MaximumLikelihoodEstimator #import MLE library\n",
@@ -445,7 +443,7 @@
         "#print(mle.estimate_cpd('size')) #unconditional \n",
         "print(mle.estimate_cpd('tasty'))  # conditional"
       ],
-      "execution_count": 40,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -486,11 +484,11 @@
       "metadata": {
         "id": "DORhzvliMI-B",
         "colab_type": "code",
+        "outputId": "dc394a8b-c05b-499e-8f62-3188ae834012",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 218
-        },
-        "outputId": "dc394a8b-c05b-499e-8f62-3188ae834012"
+        }
       },
       "source": [
         "# Calibrate all CPDs of `model` using MLE:\n",
@@ -499,7 +497,7 @@
         "\n",
         "#print(model.get_cpds('tasty'))"
       ],
-      "execution_count": 50,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -571,11 +569,11 @@
       "metadata": {
         "id": "BEdpqfg-RxZN",
         "colab_type": "code",
+        "outputId": "3aad40b1-e9a2-4e9c-ea02-a9eab3d1d09b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 168
-        },
-        "outputId": "3aad40b1-e9a2-4e9c-ea02-a9eab3d1d09b"
+        }
       },
       "source": [
         "from pgmpy.estimators import BayesianEstimator\n",
@@ -585,7 +583,7 @@
         "#variable, prior CPD calculation type, sample size\n",
         "print(est.estimate_cpd('tasty', prior_type='BDeu', equivalent_sample_size=10))"
       ],
-      "execution_count": 51,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -621,11 +619,11 @@
       "metadata": {
         "id": "3br-5ttMUrdk",
         "colab_type": "code",
+        "outputId": "ff48ba68-f2d2-4cdb-ccbd-cef5549088f7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 386
-        },
-        "outputId": "ff48ba68-f2d2-4cdb-ccbd-cef5549088f7"
+        }
       },
       "source": [
         "model.fit(data, estimator=BayesianEstimator, prior_type=\"BDeu\") # default equivalent_sample_size=5\n",
@@ -633,7 +631,7 @@
         "for cpd in model.get_cpds():\n",
         "  print(cpd)"
       ],
-      "execution_count": 55,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -717,11 +715,11 @@
       "metadata": {
         "id": "NYOZEWN_eu0v",
         "colab_type": "code",
+        "outputId": "2c9500a7-de40-4a02-f9d2-9ea797a5fe25",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 168
-        },
-        "outputId": "2c9500a7-de40-4a02-f9d2-9ea797a5fe25"
+        }
       },
       "source": [
         "import pandas as pd\n",
@@ -754,7 +752,7 @@
         "print(k2.score(model2))\n",
         "print(bic.score(model2))"
       ],
-      "execution_count": 65,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -789,11 +787,11 @@
       "metadata": {
         "id": "-H6NvJ9yh4pr",
         "colab_type": "code",
+        "outputId": "edaa1f7e-4adb-4dcb-bbc1-dbb39d8b54bd",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 67
-        },
-        "outputId": "edaa1f7e-4adb-4dcb-bbc1-dbb39d8b54bd"
+        }
       },
       "source": [
         "#getting local scores of node placement provided the parents of the child node\n",
@@ -801,7 +799,7 @@
         "print(bdeu.local_score('Z', parents=['X']))\n",
         "print(bdeu.local_score('Z', parents=['X', 'Y']))"
       ],
-      "execution_count": 69,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -837,11 +835,11 @@
       "metadata": {
         "id": "gRrteUiUjeLS",
         "colab_type": "code",
+        "outputId": "d35a3031-cede-4e63-a67f-1db67c231944",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 504
-        },
-        "outputId": "d35a3031-cede-4e63-a67f-1db67c231944"
+        }
       },
       "source": [
         "from pgmpy.estimators import ExhaustiveSearch\n",
@@ -857,7 +855,7 @@
         "for score, dag in es.all_scores(): #es.all_score() returns tuple (score, DAG)\n",
         "    print(score, dag.edges())"
       ],
-      "execution_count": 76,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -911,11 +909,11 @@
       "metadata": {
         "id": "mSz9HzWqlMUl",
         "colab_type": "code",
+        "outputId": "4b6850fa-93fa-49e7-b1b8-ec42d32729be",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "4b6850fa-93fa-49e7-b1b8-ec42d32729be"
+        }
       },
       "source": [
         "from pgmpy.estimators import HillClimbSearch\n",
@@ -931,7 +929,7 @@
         "best_model = hc.estimate()\n",
         "print(best_model.edges())"
       ],
-      "execution_count": 77,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -977,29 +975,29 @@
       "metadata": {
         "id": "4HoIgXmRpO39",
         "colab_type": "code",
+        "outputId": "8545e73d-4ede-4a5a-e152-473a94e8f2e5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 50
-        },
-        "outputId": "8545e73d-4ede-4a5a-e152-473a94e8f2e5"
+        }
       },
       "source": [
         "from pgmpy.estimators import ConstraintBasedEstimator\n",
         "\n",
-        "data = pd.DataFrame(np.random.randint(0, 3, size=(2500, 5)), columns=list('ABCDE'))\n",
-        "\n",
-        "data['F'] = data['A'] + data['B'] #F depends on A and B\n",
-        "\n",
+        "data = pd.DataFrame(np.random.randint(0, 3, size=(2500, 8)), columns=list('ABCDEFGH'))\n",
+        "data['A'] += data['B'] + data['C']\n",
+        "data['H'] = data['G'] - data['A']\n",
+        "data['E'] *= data['F']\n",
         "\n",
         "est = ConstraintBasedEstimator(data)\n",
         "\n",
-        "print(est.test_conditional_independence('F', 'C' , ['A', 'B']))\n",
-        "print(est.test_conditional_independence('B', 'E'))          \n",
-        "# print(est.test_conditional_independence('B', 'H', ['A']))   \n",
-        "# print(est.test_conditional_independence('A', 'G'))          \n",
-        "# print(est.test_conditional_independence('A', 'G',  ['H']))  "
+        "print(est.test_conditional_independence('B', 'H'))          # dependent\n",
+        "print(est.test_conditional_independence('B', 'E'))          # independent\n",
+        "print(est.test_conditional_independence('B', 'H', ['A']))   # independent\n",
+        "print(est.test_conditional_independence('A', 'G'))          # independent\n",
+        "print(est.test_conditional_independence('A', 'G',  ['H']))  # dependent"
       ],
-      "execution_count": 86,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1020,7 +1018,19 @@
       "source": [
         "`test_conditional_independence()` returns a tripel `(chi2, p_value, sufficient_data)`, consisting in the computed chi2 test statistic, the `p_value` of the test, and a heuristig flag that indicates if the sample size was sufficient. The `p_value` is the probability of observing the computed chi2 statistic (or an even higher chi2 value), given the null hypothesis that X and Y are independent given Zs.\n",
         "\n",
-        "This can be used to make independence judgements, at a given level of significance:"
+        "This can be used to make independence judgements, at a given level of significance:\n",
+        "\n",
+        "\n",
+        "\n",
+        "---\n",
+        "\n",
+        "high significance (p-value) = independence\n",
+        "\n",
+        "low significance (p-value) = dependence\n",
+        "\n",
+        "high chi2 = weak relationship\n",
+        "\n",
+        "low chi2 = strong relationship\n"
       ]
     },
     {
@@ -1048,11 +1058,11 @@
       "metadata": {
         "id": "RgXh79O4su-r",
         "colab_type": "code",
+        "outputId": "3f2f513c-c92e-42d4-9dd1-aab27b987de1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 50
-        },
-        "outputId": "3f2f513c-c92e-42d4-9dd1-aab27b987de1"
+        }
       },
       "source": [
         "def is_independent(X, Y, Zs=[], significance_level=0.05):\n",
@@ -1062,7 +1072,7 @@
         "print(is_independent('F', 'A' , ['C']))\n",
         "print(is_independent('A', 'B'))"
       ],
-      "execution_count": 89,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1096,26 +1106,32 @@
       "metadata": {
         "id": "CudJpZ3lvaLt",
         "colab_type": "code",
+        "outputId": "d2f57aa0-57dc-47fa-ebb0-84ae4c4cc92d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "d2f57aa0-57dc-47fa-ebb0-84ae4c4cc92d"
+        }
       },
       "source": [
-        "# skel, seperating_sets = est.estimate_skeleton(significance_level=0.01)\n",
-        "# print(\"Undirected edges: \", skel.edges())\n",
+        "skel, seperating_sets = est.estimate_skeleton(significance_level=0.01)\n",
+        "print(\"Undirected edges: \", skel.edges())\n",
         "\n",
-        "# pdag = est.skeleton_to_pdag(skel, seperating_sets)\n",
-        "# print(\"PDAG edges:       \", pdag.edges())\n",
+        "pdag = est.skeleton_to_pdag(skel, seperating_sets)\n",
+        "print(\"PDAG edges:       \", pdag.edges())\n",
         "\n",
-        "# model = est.pdag_to_dag(pdag)\n",
-        "# print(\"DAG edges:        \", model.edges())\n",
+        "model = est.pdag_to_dag(pdag)\n",
+        "print(\"DAG edges:        \", model.edges())\n",
         "\n",
         "#short-hand of the methods above in order to get to creating the DAG\n",
-        "est.estimate(significance_level=0.01).edges()"
+        "est.estimate(significance_level=0.01).edges()\n",
+        "\n",
+        "\n",
+        "# significance_level` is the desired Type 1 error probability of\n",
+        "# falsely rejecting the null hypothesis that variables are independent,\n",
+        "# given that they are. The lower `significance_level`, the less likely\n",
+        "# we are to accept dependencies, resulting in a sparser graph."
       ],
-      "execution_count": 94,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1146,11 +1162,11 @@
       "metadata": {
         "id": "521sml8qz-Bh",
         "colab_type": "code",
+        "outputId": "704fcf14-3fbd-4f86-89d1-9883017fc082",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "704fcf14-3fbd-4f86-89d1-9883017fc082"
+        }
       },
       "source": [
         "from pgmpy.independencies import Independencies\n",
@@ -1163,7 +1179,7 @@
         "\n",
         "print(model.edges())"
       ],
-      "execution_count": 95,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1199,21 +1215,21 @@
         "colab": {}
       },
       "source": [
-        "# from pgmpy.estimators import MmhcEstimator\n",
+        "from pgmpy.estimators import MmhcEstimator\n",
         "\n",
-        "# data = pd.DataFrame(np.random.randint(0, 3, size=(2500, 8)), columns=list('ABCDEFGH'))\n",
-        "# data['A'] += data['B'] + data['C']\n",
-        "# data['H'] = data['G'] - data['A']\n",
-        "# data['E'] *= data['F']\n",
+        "data = pd.DataFrame(np.random.randint(0, 3, size=(2500, 8)), columns=list('ABCDEFGH'))\n",
+        "data['A'] += data['B'] + data['C']\n",
+        "data['H'] = data['G'] - data['A']\n",
+        "data['E'] *= data['F']\n",
         "\n",
-        "# mmhc = MmhcEstimator(data)\n",
-        "# skeleton = mmhc.mmpc()\n",
-        "# print(\"Part 1) Skeleton: \", skeleton.edges())\n",
+        "mmhc = MmhcEstimator(data)\n",
+        "skeleton = mmhc.mmpc()\n",
+        "print(\"Part 1) Skeleton: \", skeleton.edges())\n",
         "\n",
-        "# # use hill climb search to orient the edges:\n",
-        "# hc = HillClimbSearch(data, scoring_method=BDeuScore(data))\n",
-        "# model = hc.estimate(tabu=10, white_list=skeleton.to_directed().edges())\n",
-        "# print(\"Part 2) Model:    \", model.edges())"
+        "# use hill climb search to orient the edges:\n",
+        "hc = HillClimbSearch(data, scoring_method=BDeuScore(data))\n",
+        "model = hc.estimate(tabu=10, white_list=skeleton.to_directed().edges())\n",
+        "print(\"Part 2) Model:    \", model.edges())"
       ],
       "execution_count": 0,
       "outputs": []
@@ -1256,7 +1272,7 @@
         "df.insert(len(columns), \"Type\", target) #combine training and target data into one dataframe\n",
         "df"
       ],
-      "execution_count": 101,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1895,7 +1911,7 @@
         "    \n",
         "g"
       ],
-      "execution_count": 116,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1924,11 +1940,11 @@
       "metadata": {
         "id": "6hVlQ1b-9Mfp",
         "colab_type": "code",
+        "outputId": "700aff4c-fc5b-4df1-a52e-1eeb9d444fb7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 4606
-        },
-        "outputId": "700aff4c-fc5b-4df1-a52e-1eeb9d444fb7"
+        }
       },
       "source": [
         "from pgmpy.estimators import BayesianEstimator\n",
@@ -1940,7 +1956,7 @@
         "for cpd in best_model.get_cpds():\n",
         "  print(cpd)"
       ],
-      "execution_count": 119,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -2272,7 +2288,15 @@
         "\n",
         "[2] [Neapolitan, Learning Bayesian Networks, 2003](http://www.cs.technion.ac.il/~dang/books/Learning%20Bayesian%20Networks&#40;Neapolitan,%20Richard&#41;.pdf)\n",
         "\n",
-        "[3] [Tsamardinos et al., The max-min hill-climbing BN structure learning algorithm, 2005](http://www.dsl-lab.org/supplements/mmhc_paper/paper_online.pdf)\n"
+        "[3] [Tsamardinos et al., The max-min hill-climbing BN structure learning algorithm, 2005](http://www.dsl-lab.org/supplements/mmhc_paper/paper_online.pdf)\n",
+        "\n",
+        "\n",
+        "---\n",
+        "\n",
+        "Others:\n",
+        "\n",
+        "http://pgmpy.chrisittner.de/2016/08/17/pc.html#pc\n",
+        "\n"
       ]
     }
   ]
